fix(nav): fix positioning for homepage overflowing nav

--- a/source/templates/generic/nav.sass
+++ b/source/templates/generic/nav.sass
@@ -1,10 +1,5 @@
 nav
 	text-align: center
-	@media (min-width: 60rem)
-		position: absolute
-		margin: auto
-		right: 0
-		left: 0
 
 	ul, li, ul a
 		display: inline-block
