--- a/source/templates/pages/homepage.sass
+++ b/source/templates/pages/homepage.sass
@@ -1,3 +1,10 @@
+nav
+	@media (min-width: 60rem)
+		position: absolute
+		margin: auto
+		right: 0
+		left: 0
+
 .hero-container
 	position: relative
 
